@@ -1011,4 +1011,8 @@ class Sys {
       Sys->fcntl($pipe_fds->[1], IO->F_SETFD, IO->FD_CLOEXEC);
     }
   }
+  
+  static method alarm : int ($seconds : int) {
+    Sys::Signal->alarm($seconds);
+  }
 }
