@@ -2,6 +2,7 @@
   [New Features]
     * Add the _putenv_s method to the Sys::Env class.
     * Add the set_env method to the Sys class.
+    * Add the alarm method to the Sys class.
   [Incompatible Changes]
     * Remove the Sys::FileTest class.
   [Bug Fix with Incompatible Changes]
